substrate/frame/support/test/tests/pallet_ui/hold_reason_not_pub.stderr
error: Invalid pallet::composite_enum, `HoldReason` must be public
  --> tests/pallet_ui/hold_reason_not_pub.rs:27:5
   |
27 |     enum HoldReason {}
   |     ^^^^
